# avatar

./: .gitattributes  .gitignore  GDScriptAudioImport.gd  default_bus_layout.tres  flaca.wav.import  icon.svg.import  llm.py  llm_google.py  project.godot  pyproject.toml  rhubarb_parser.gd  stt.py  stt_google.py  tts_google.py  uv  voice_recorder.gd  voice_recorder.tscn  world.tscn
Alien/: alien.gd  alien.tscn  mouth rig.blend.import
Alien/sounds/: lipsync.wav.import
Alien/textures/: 256 palette.png.import  teufelsberg_inner_2k.hdr.import
UI/: quick_actions.tscn
components/voice_google_api/: voice_google_api.gd  voice_google_api.tscn
components/voice_recorder/: voice_recorder.gd  voice_recorder.tscn
rhubarb-lip-sync/tests/resources/: sine-triangle-flac-ffmpeg.wav.import  sine-triangle-float32-audacity.wav.import  sine-triangle-float32-audition.wav.import  sine-triangle-float32-ffmpeg.wav.import  sine-triangle-float32-soundforge.wav.import  sine-triangle-float64-ffmpeg.wav.import  sine-triangle-int16-audacity.wav.import  sine-triangle-int16-audition.wav.import  sine-triangle-int16-ffmpeg.wav.import  sine-triangle-int16-soundforge.wav.import  sine-triangle-int24-audacity.wav.import  sine-triangle-int24-audition.wav.import  sine-triangle-int24-ffmpeg.wav.import  sine-triangle-int24-soundforge.wav.import  sine-triangle-int32-ffmpeg.wav.import  sine-triangle-int32-soundforge.wav.import  sine-triangle-uint8-audition.wav.import  sine-triangle-uint8-ffmpeg.wav.import  sine-triangle-uint8-soundforge.wav.import  sine-triangle-vorbis-ffmpeg.wav.import
server/: main.py
