[project]
name = "avatar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faster-whisper>=1.1.1",
    "google-cloud-speech>=2.30.0",
    "google-cloud-texttospeech>=2.24.0",
    "google-generativeai>=0.8.4",
    "ollama>=0.4.7",
    "python-dotenv>=1.0.1",
]
